# Wasm-vs-JS-Data-Compression

./: .gitignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  wasm-compressor.d.ts
components/: FileProcessor.tsx  StatCard.tsx  icons.tsx
rust/: Cargo.toml
rust/src/: lib.rs
services/: compressor.ts
